--- a/Servidor/ux/html/admin.html
+++ b/Servidor/ux/html/admin.html
@@ -29,7 +29,7 @@ Modificado: 3/12/19
 
         var primeraLlamadaA_rellenarTarjetasNumeroSensores = true; // Se utiliza para borrar previamente el texto con los numeros que hay en las tarjetas si no es la primera vez que se llama a rellenarTarjetasNumeroSensores, si esto no se hiciera no se visualizarian los numeros
 
-        var hayAlgunElementoSeleccionado = false;
+        var hayAlgunElementoSeleccionado = false; // Para saber si hay algun elemento seleccionado y poder cambiar su color o borrarlo
 
         var elementoSeleccionado; // Se utiliza para cambiar el color del elemento seleccionado
 
