--- a/Servidor/ux/html/admin.html
+++ b/Servidor/ux/html/admin.html
@@ -968,7 +968,7 @@ Modificado: 3/12/19
             <!-- Navigation -->
             <nav class="navbar navbar-expand-lg navbar-dark fixed-top fondoOscuro navbar-shrink8" id="darkNav">
                 <div class="container">
-                    <a class="navbar-brand js-scroll-trigger nunito" href="#page-top"><img src="../images/earth.png"
+                    <a class="navbar-brand js-scroll-trigger nunito" href="index.html"><img src="../images/earth.png"
                             width="30" alt=""> Poluzone</a>
                     <a class="navbar-toggler navbar-toggler-right nunito" type="button" data-toggle="collapse"
                         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
