--- a/Servidor/ux/html/admin.html
+++ b/Servidor/ux/html/admin.html
@@ -1523,27 +1523,27 @@ Modificado: 3/12/19
     <!-------------------------------------------------- /CONTENEDOR ----------------------------------------------------------->
 
 
-
     <!-- Modal añadir sensor-->
-  <div class="modal fade" id="modal-anyadir-sensor" role="dialog">
-    <div class="modal-dialog">
-    
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the modal.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    <div class="modal fade" id="modal-anyadir-sensor" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Añadir sensor</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Modal body text goes here.</p>
+              <button type="button" class="btn btn-primary">Escanear QR</button>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary">Guardar</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            </div>
+          </div>
         </div>
       </div>
-      
-    </div>
-  </div>
 
 
     <!-- Librería jQuery requerida por los plugins de JavaScript -->
