Añadida URL a plesk

--- a/ux/html/LoginAdmin.html
+++ b/ux/html/LoginAdmin.html
@@ -34,7 +34,7 @@
 
         function checkCookie() {
             var user = getCookie("username");
-            var url = "http://localhost:8080/ux/html/admin.html";
+            var url = "https://juconol.upv.edu.es";
             console.log("hey"+user);
             if (user != "") {
                 var a = document.createElement("a");
