--- a/ux/html/index.html
+++ b/ux/html/index.html
@@ -218,7 +218,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="#mapa">Mapa</a>
+                            <a class="nav-link js-scroll-trigger" href="#mapa">Mapaaaaa</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger" href="#app">App</a>
@@ -543,7 +543,7 @@ plugins que utilices) -->
         <!-- Custom scripts for this template -->
         <script src="../js/agency.min.js"></script>
         <script src="../jquery-easing/jquery.easing.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
                 integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
                 crossorigin="anonymous"></script>
